# DrumMark

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN_REVIEW.md  DSL_DESIGN.md  LEARNINGS.md  PLAN.md  README.md  README_zh.md  TASKS.md  build-docs.ts  clef_test.html  docs.html  docs.template.html  docs_zh.html  docs_zh.template.html  index.html  package-lock.json  package.json  prerender-docs.mjs  prerender-node.ts  test.drum  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.test.json  vite.config.ts  vitest.config.ts
archived/: DRUM_IR_SPEC_V1.md
crates/drummark-cli/: Cargo.toml
crates/drummark-cli/src/: args.rs  export.rs  json.rs  main.rs  pdf.rs  svg.rs
crates/drummark-cli/tests/: cli.rs
docs/: DRUMMARK_SPEC.md  LEARNINGS.md  PARSER_OWNERSHIP.md  PLAN.md  RENDER_LAYOUT_CONTRACT.md  SPEC_TEST_EXECUTION_CHECKLIST.md  TASKS.md
docs/adr/: README.md
examples/: 你要跳舞吗.drum  李白-李荣浩.drum
scripts/: build_wasm.mjs  check_import_boundaries.mjs  check_import_boundaries.test.mjs  report_bundle.mjs  update_corpus_golden.ts  update_example_corpus_report.ts  update_musicxml_corpus.ts  wasm_watch.mjs
src/: App.tsx  DocsPage.tsx  DocsPage_zh.tsx  Gallery.tsx  cli.ts  cli_output.test.ts  cli_output.ts  cli_render_env.test.ts  cli_render_env.ts  cli_runtime.test.ts  cli_runtime.ts  docs.css  docsMain.tsx  docsMain_zh.tsx  docsVanilla.ts  drummark.test.ts  drummark.ts  dslLanguage.ts  editorDiagnostics.test.ts  editorDiagnostics.ts  global.d.ts  main.tsx  pdfHeader.test.ts  pdfHeader.ts  render-cli.ts  scoreWorker.ts  styles.css  theme.test.ts  theme.ts
(+281 files in other folders)
