[package]
name = "drummark-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native DrumMark command line exporter"

[[bin]]
name = "drummark"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
drummark-core = { path = "../drummark-core", default-features = false, features = ["layout"] }
drummark-layout = { path = "../drummark-layout" }
hb-subset = { version = "0.3.0", features = ["bundled"] }
printpdf = "0.9.1"
serde_json = "1"
ttf-parser = "0.25"

[dev-dependencies]
tempfile = "3"
